# node-fontinfo

./: .gitignore  CMakeLists.txt  README  appveyor.yml  index.js  main.js  package.json
src/: module.cpp
src/fontinfo/: endian.h  fontinfo.c  fontinfo.h
test/: simple_test.c
